fix width-setting for jigoro image that caused stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,7 +156,8 @@ h1 {
 } 
 
 #jigoro {
-    width: 40%;
+    width: auto;
+    max-width: 40%;
     margin-right: 2vw;
     border: solid 2px;
     border-radius: 10px;
